--- a/index.html
+++ b/index.html
@@ -5,30 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Product preview card component</title>
 
-  <style>
+  <!-- Montserrat font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 
-  </style>
+  <!-- Fraunces font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  <div class="container">
+    <div class="row">
+        <div class="side-content">
+          <div class="title">
+            Perfume
+          </div>
+            <div class="header">
+              Gabrielle<br> 
+              Essence Eau<br> 
+              De Parfum
+            </div>
+            <div class="section">
+              A floral, solar and voluptuous<br> 
+              interpretation composed by<br>
+              Olivier Polge, Perfumer-Creator<br> 
+              for the House of CHANEL.
+            </div>
+              <div class="discount">
+                $149.99
+                <span class="prices">$169.99</span>
+              </div>
+              <button class="add-to-cart">
+                Add to Cart
+              </button>
+        </div>
+    </div>
+  </div>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
   <div class="footer">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    <br>
+    Coded by <a href="#">Carson Lee</a>.
   </div>
 </body>
 </html>
