--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     <br>
-    Coded by <a href="#">Carson Lee</a>.
+    Coded by <a href="https://github.com/Carson3377/Product-preview-card">Carson Lee</a>.
   </div>
 </body>
 </html>
